<resources>
    <string name="app_name">AskMeShowMe : Jay Pandya 062791132</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_hello_android">AskMeShowMe</string>
    <string name="title_activity_ask_me_show_me">Ask ME, Show Me</string>
    <string name="title_show_me">Show Me</string>

    <string name="january">January</string>
    <string name="june">June</string>
    <string name="july">July</string>

    <string name="about_label">About</string>
    <string name="exit_label">Exit</string>

    <string name="prefs_title">Preferences...</string>

    <string name="hints_title">Hints</string>
    <string name="hints_summary">Short memory aid.</string>
    <string name="video_title">Video....DacingLadyBugs</string>
    <string name="video_summary">Nice and Simple Video Clip ran from the Linux File System.</string>

    <string name="about_title">About...</string>
    <string name="about_text">AskMeShowMeMore is a nice and simple Android Application that illustrates simple event handling and interaction between activities.</string>

    <string name="mywebsite">github.com/singularitypress</string>
    <string name="myemail">jaypandya2k5@gmail.com</string>
    <string name="myphone">4165555555</string>

    <string name="prompt_label">SELECT</string>

</resources>
