<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="left">

    <LinearLayout
        android:id="@+id/digitRow1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:gravity="left">

        <RadioGroup
            android:id="@+id/monthsRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/januaryButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:focusable="false"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:text="@string/january">
            </RadioButton>

            <RadioButton
                android:id="@+id/juneButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:focusable="false"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:text="@string/june">
            </RadioButton>

            <RadioButton
                android:id="@+id/julyButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:focusable="false"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:text="@string/july">
            </RadioButton>

        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hello_world"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="all"
            android:text="@string/mywebsite"/>
        <TextView android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="all"
            android:text="@string/myemail"/>
        <TextView android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="all"
            android:text="@string/myphone"/>
        <Button android:id="@+id/prompt_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prompt_label" />
    </LinearLayout>
</LinearLayout>
